new tables and figs

--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Packages\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import dataframe_image as dfi # NOTE: YOU MUST HAVE GOOGLE CHROME INSTALLED FOR THIS TO WORK CORRECTLY"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -441,9 +442,9 @@
       "0                              Majority Baseline   0.3247   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
-      "0                       0.35                    0.39   0.3408   \n",
-      "0                       0.77                    0.76   0.7575   \n",
-      "0                       0.90                    0.90   0.9017   \n",
+      "0                     0.3468                  0.3855   0.3408   \n",
+      "0                     0.7679                  0.7630   0.7575   \n",
+      "0                     0.9040                  0.9034   0.9017   \n",
       "0                                                               \n",
       "\n",
       "  Share $\\le$ 1 Rating From Actual  \n",
@@ -471,7 +472,36 @@
       "0                           0.9946  \n",
       "0                           0.9964  \n",
       "0                           0.9964  \n",
-      "0                                   \n"
+      "0                                   \n",
+      "     ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
+      "0      AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
+      "1      ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
+      "2      ABBV         2016-04-01                Same As Last Fixed Quarter Date   \n",
+      "3       ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
+      "4       ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
+      "...     ...                ...                                            ...   \n",
+      "1113    XOM         2016-01-01                Same As Last Fixed Quarter Date   \n",
+      "1114    YUM         2015-04-01                Same As Last Fixed Quarter Date   \n",
+      "1115   ZBRA         2016-10-01                Same As Last Fixed Quarter Date   \n",
+      "1116    ZTS         2013-10-01                Same As Last Fixed Quarter Date   \n",
+      "1117    ZTS         2014-04-01                Same As Last Fixed Quarter Date   \n",
+      "\n",
+      "     rating_change_model_1_predictions  \n",
+      "0      Same As Last Fixed Quarter Date  \n",
+      "1      Same As Last Fixed Quarter Date  \n",
+      "2      Same As Last Fixed Quarter Date  \n",
+      "3      Same As Last Fixed Quarter Date  \n",
+      "4      Same As Last Fixed Quarter Date  \n",
+      "...                                ...  \n",
+      "1113   Same As Last Fixed Quarter Date  \n",
+      "1114   Same As Last Fixed Quarter Date  \n",
+      "1115   Same As Last Fixed Quarter Date  \n",
+      "1116   Same As Last Fixed Quarter Date  \n",
+      "1117   Same As Last Fixed Quarter Date  \n",
+      "\n",
+      "[1118 rows x 4 columns]\n",
+      "same share\n",
+      "0.9535\n"
      ]
     }
    ],
@@ -502,6 +532,12 @@
     "        'Share 1 Rating Or Less From Actual': ['']\n",
     "    })])\n",
     "\n",
+    "    # if include set include_exclude_previous_model_comparison_df\n",
+    "    if include_exclude_previous == 'include_previous_':\n",
+    "        include_previous_model_comparison_df = model_comparison_df\n",
+    "    else:\n",
+    "        exclude_previous_model_comparison_df = model_comparison_df\n",
+    "\n",
     "    # Export to Excel\n",
     "    model_comparison_df.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.xlsx', index = False)\n",
     "\n",
@@ -517,7 +553,68 @@
     "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
-    "    print(model_comparison_df)"
+    "    print(model_comparison_df)\n",
+    "\n",
+    "    # If include_previous, add a row that is the share of items with \"Same\" in test data\n",
+    "    if include_exclude_previous == 'include_previous_':\n",
+    "        test_data_example = pd.read_excel('../../../../Data/Predictions/Logistic Regression/rating_change_model_1/rating_change_model_1_predictions.xlsx')\n",
+    "        print(test_data_example)\n",
+    "        same_share = test_data_example[test_data_example['Change Direction Since Last Fixed Quarter Date'] == 'Same As Last Fixed Quarter Date'].shape[0] / test_data_example.shape[0]\n",
+    "        # round to 4 decimal places\n",
+    "        same_share = round(same_share, 4)\n",
+    "        print('same share')\n",
+    "        print(same_share)\n",
+    "        # Create dataframe row\n",
+    "        same_share_row = pd.DataFrame({\n",
+    "            'Model/Baseline': ['Previous Rating'],\n",
+    "            'Accuracy': [same_share],\n",
+    "            'Weighted Average Precision': [''],\n",
+    "            'Weighted Average Recall': [''],\n",
+    "            'F1 Score': [''],\n",
+    "        })\n",
+    "        # Concatenate rows\n",
+    "        model_comparison_df_ss = pd.concat([model_comparison_df, same_share_row])\n",
+    "        # Export to Excel\n",
+    "        model_comparison_df_ss.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df_ss.xlsx', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Styling\n",
+    "#print(exclude_previous_model_comparison_df)\n",
+    "exclude_previous_model_comparison_sty = (exclude_previous_model_comparison_df.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(exclude_previous_model_comparison_sty, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'exclude_previous_' + 'model_comparison_df.png')\n",
+    "#exclude_previous_model_comparison_sty\n",
+    "\n",
+    "include_previous_model_comparison_sty = (include_previous_model_comparison_df.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(include_previous_model_comparison_sty, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'include_previous_' + 'model_comparison_df.png')\n",
+    "#include_previous_model_comparison_sty\n",
+    "\n",
+    "model_comparison_df_ss = (model_comparison_df_ss.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=4, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(model_comparison_df_ss, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'include_previous_' + 'model_comparison_df_ss.png')\n",
+    "#model_comparison_df_ss"
    ]
   },
   {
@@ -529,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -538,32 +635,32 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         AAA       0.90      0.79      0.84        24\n",
-      "          AA       0.88      0.58      0.70        52\n",
-      "           A       0.84      0.89      0.87       208\n",
-      "         BBB       0.91      0.95      0.93       363\n",
-      "          BB       0.94      0.92      0.93       284\n",
-      "           B       0.93      0.91      0.92       154\n",
-      "         CCC       0.79      0.85      0.81        26\n",
-      "          CC       1.00      0.50      0.67         2\n",
-      "           C       1.00      1.00      1.00         4\n",
-      "           D       1.00      1.00      1.00         1\n",
+      "           A     0.8447    0.8894    0.8665       208\n",
+      "          AA     0.8824    0.5769    0.6977        52\n",
+      "         AAA     0.9048    0.7917    0.8444        24\n",
+      "           B     0.9272    0.9091    0.9180       154\n",
+      "          BB     0.9357    0.9225    0.9291       284\n",
+      "         BBB     0.9129    0.9532    0.9326       363\n",
+      "           C     1.0000    1.0000    1.0000         4\n",
+      "          CC     1.0000    0.5000    0.6667         2\n",
+      "         CCC     0.7857    0.8462    0.8148        26\n",
+      "           D     1.0000    1.0000    1.0000         1\n",
       "\n",
-      "    accuracy                           0.90      1118\n",
-      "   macro avg       0.92      0.84      0.87      1118\n",
-      "weighted avg       0.90      0.90      0.90      1118\n",
+      "    accuracy                         0.9034      1118\n",
+      "   macro avg     0.9193    0.8389    0.8670      1118\n",
+      "weighted avg     0.9040    0.9034    0.9017      1118\n",
       "\n",
-      "  Rating Precision Recall F1-Score Support\n",
-      "0    AAA      0.90   0.79     0.84      24\n",
-      "1     AA      0.88   0.58     0.70      52\n",
-      "2      A      0.84   0.89     0.87     208\n",
-      "3    BBB      0.91   0.95     0.93     363\n",
-      "4     BB      0.94   0.92     0.93     284\n",
-      "5      B      0.93   0.91     0.92     154\n",
-      "6    CCC      0.79   0.85     0.81      26\n",
-      "7     CC      1.00   0.50     0.67       2\n",
-      "8      C      1.00   1.00     1.00       4\n",
-      "9      D      1.00   1.00     1.00       1\n",
+      "  Rating Precision  Recall F1-Score Support\n",
+      "0      A    0.8447  0.8894   0.8665     208\n",
+      "1     AA    0.8824  0.5769   0.6977      52\n",
+      "2    AAA    0.9048  0.7917   0.8444      24\n",
+      "3      B    0.9272  0.9091   0.9180     154\n",
+      "4     BB    0.9357  0.9225   0.9291     284\n",
+      "5    BBB    0.9129  0.9532   0.9326     363\n",
+      "6      C    1.0000  1.0000   1.0000       4\n",
+      "7     CC    1.0000  0.5000   0.6667       2\n",
+      "8    CCC    0.7857  0.8462   0.8148      26\n",
+      "9      D    1.0000  1.0000   1.0000       1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           A     0.9604    0.9327    0.9463       208\n",
@@ -641,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -844,6 +941,12 @@
     "    # Get top 15\n",
     "    pi_top_15 = permutation_importance.head(15)\n",
     "\n",
+    "    # If includ_previous set to include_previous_pi_top_15\n",
+    "    if include_exclude_previous == 'include_previous_':\n",
+    "        include_previous_pi_top_15 = pi_top_15\n",
+    "    else:\n",
+    "        exclude_previous_pi_top_15 = pi_top_15\n",
+    "\n",
     "    # Export to Excel\n",
     "    pi_top_15.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Permutation_Importance_Top_15.xlsx', index=False)\n",
     "\n",
@@ -861,6 +964,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "include_previous_pi_top_15 = (include_previous_pi_top_15.reset_index(drop=True)\n",
+    "                            .style\n",
+    "                            .format(precision=6, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(include_previous_pi_top_15, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'include_previous_' + 'Most_Complex_Model_Permutation_Importance_Top_15.png')\n",
+    "#include_previous_pi_top_15\n",
+    "\n",
+    "exclude_previous_pi_top_15 = (exclude_previous_pi_top_15.reset_index(drop=True)\n",
+    "                            .style\n",
+    "                            .format(precision=6, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(exclude_previous_pi_top_15, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'exclude_previous_' + 'Most_Complex_Model_Permutation_Importance_Top_15.png')\n",
+    "#exclude_previous_pi_top_15"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -869,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -938,6 +1068,12 @@
     "    # Drop 'Share 1 Rating Or Less From Actual' column\n",
     "    model_comparison_df = model_comparison_df.drop(columns=['Share 1 Rating Or Less From Actual'])\n",
     "\n",
+    "    # if smote set as change_smote_model_comparison_df\n",
+    "    if spec == 'smote_':\n",
+    "        change_smote_model_comparison_df = model_comparison_df\n",
+    "    else:\n",
+    "        change_model_comparison_df = model_comparison_df\n",
+    "\n",
     "    # Export to Excel\n",
     "    model_comparison_df.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/change_' + spec + 'model_comparison_df.xlsx', index = False)\n",
     "\n",
@@ -954,6 +1090,35 @@
     "        f.write(latex_with_font_size)\n",
     "\n",
     "    print(model_comparison_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Styling\n",
+    "#print(exclude_previous_model_comparison_df)\n",
+    "change_model_comparison_df = (change_model_comparison_df.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(change_model_comparison_df, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'change_model_comparison_df.png')\n",
+    "#change_model_comparison_df\n",
+    "\n",
+    "change_smote_model_comparison_df = (change_smote_model_comparison_df.reset_index(drop=True)[['Model/Baseline', 'Accuracy']]\n",
+    "                            .style\n",
+    "                            .format(precision=2, thousands=\",\", decimal=\".\")\n",
+    "                            .set_table_styles([dict(selector='th', props=[('text-align', 'center')])])\n",
+    "                            .hide()\n",
+    "                            .set_properties(**{'text-align': 'center'}))\n",
+    "\n",
+    "dfi.export(change_smote_model_comparison_df, '../../../../Output/Modelling/' + classifier_name + '/Tables/' + 'change_smote_model_comparison_df.png')\n",
+    "#change_smote_model_comparison_df"
    ]
   }
  ],
@@ -973,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
