--- a/Code/Data Loading and Cleaning/Tabular Financial/tabular_findata_retrival&loading.ipynb
+++ b/Code/Data Loading and Cleaning/Tabular Financial/tabular_findata_retrival&loading.ipynb
@@ -924,7 +924,7 @@
       "outputs": [],
       "source": [
         "# API key for accessing the financial data\n",
-        "api_key = \"GzzXB8zIm8u1NJzcFKZNOwcOyxarZEmi\"\n",
+        "api_key = \"test\"\n",
         "\n",
         "# Function to fetch financial statements data\n",
         "def fetch_financial_statements(company):\n",
