--- a/Code/Replication Sample/Replication Sample.ipynb
+++ b/Code/Replication Sample/Replication Sample.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Replication Sample\n",
     "\n",
-    "This code replicates our main results for our most important model: XGBoost excluding previous rating including the financial variables and NLP features, without grid search."
+    "This code replicates our main results for our most important model: XGBoost excluding previous rating but including the financial variables and NLP features.\n",
+    "\n",
+    "We use the same data as was used in the main model, but do not perform grid search, using pre-set hyperparameters."
    ]
   },
   {
@@ -16,17 +18,11 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "import os\n",
     "import pandas as pd\n",
-    "import re\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import xgboost as xgb\n",
-    "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay, classification_report, confusion_matrix\n",
     "# permutation importance\n",
     "from sklearn.inspection import permutation_importance\n",
     "# Kill warnings\n",
