smaller df versions

--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -554,6 +554,14 @@
     "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
+    "    # Smaller version latex - keep only columns 'Model/Baseline', 'Accuracy'\n",
+    "    model_comparison_df_smaller = model_comparison_df[['Model/Baseline', 'Accuracy']]\n",
+    "    # Center all columns\n",
+    "    lt_string = model_comparison_df_smaller.to_latex(index=False, column_format='c' * len(model_comparison_df_smaller.columns), escape=False)\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'model_comparison_df_smaller.tex', 'w') as f:\n",
+    "        f.write(latex_with_font_size)\n",
+    "\n",
     "    print(model_comparison_df)\n",
     "\n",
     "    # If include_previous, add a row that is the share of items with \"Same\" in test data\n",
@@ -588,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -972,116 +980,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_44d86 th {\n",
-       "  text-align: center;\n",
-       "}\n",
-       "#T_44d86_row0_col0, #T_44d86_row0_col1, #T_44d86_row0_col2, #T_44d86_row1_col0, #T_44d86_row1_col1, #T_44d86_row1_col2, #T_44d86_row2_col0, #T_44d86_row2_col1, #T_44d86_row2_col2, #T_44d86_row3_col0, #T_44d86_row3_col1, #T_44d86_row3_col2, #T_44d86_row4_col0, #T_44d86_row4_col1, #T_44d86_row4_col2, #T_44d86_row5_col0, #T_44d86_row5_col1, #T_44d86_row5_col2, #T_44d86_row6_col0, #T_44d86_row6_col1, #T_44d86_row6_col2, #T_44d86_row7_col0, #T_44d86_row7_col1, #T_44d86_row7_col2, #T_44d86_row8_col0, #T_44d86_row8_col1, #T_44d86_row8_col2, #T_44d86_row9_col0, #T_44d86_row9_col1, #T_44d86_row9_col2, #T_44d86_row10_col0, #T_44d86_row10_col1, #T_44d86_row10_col2, #T_44d86_row11_col0, #T_44d86_row11_col1, #T_44d86_row11_col2, #T_44d86_row12_col0, #T_44d86_row12_col1, #T_44d86_row12_col2, #T_44d86_row13_col0, #T_44d86_row13_col1, #T_44d86_row13_col2, #T_44d86_row14_col0, #T_44d86_row14_col1, #T_44d86_row14_col2 {\n",
-       "  text-align: center;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_44d86\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th id=\"T_44d86_level0_col0\" class=\"col_heading level0 col0\" >Permuted Feature</th>\n",
-       "      <th id=\"T_44d86_level0_col1\" class=\"col_heading level0 col1\" >Mean Accuracy Drop</th>\n",
-       "      <th id=\"T_44d86_level0_col2\" class=\"col_heading level0 col2\" >Standard Deviation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row0_col0\" class=\"data row0 col0\" >Rating on Previous Fixed Quarter Date BB</td>\n",
-       "      <td id=\"T_44d86_row0_col1\" class=\"data row0 col1\" >0.256178</td>\n",
-       "      <td id=\"T_44d86_row0_col2\" class=\"data row0 col2\" >0.009675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row1_col0\" class=\"data row1 col0\" >Rating on Previous Fixed Quarter Date BBB</td>\n",
-       "      <td id=\"T_44d86_row1_col1\" class=\"data row1 col1\" >0.233306</td>\n",
-       "      <td id=\"T_44d86_row1_col2\" class=\"data row1 col2\" >0.008979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row2_col0\" class=\"data row2 col0\" >Rating on Previous Fixed Quarter Date A</td>\n",
-       "      <td id=\"T_44d86_row2_col1\" class=\"data row2 col1\" >0.111181</td>\n",
-       "      <td id=\"T_44d86_row2_col2\" class=\"data row2 col2\" >0.006236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row3_col0\" class=\"data row3 col0\" >Rating on Previous Fixed Quarter Date B</td>\n",
-       "      <td id=\"T_44d86_row3_col1\" class=\"data row3 col1\" >0.064464</td>\n",
-       "      <td id=\"T_44d86_row3_col2\" class=\"data row3 col2\" >0.003919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row4_col0\" class=\"data row4 col0\" >Rating on Previous Fixed Quarter Date CCC</td>\n",
-       "      <td id=\"T_44d86_row4_col1\" class=\"data row4 col1\" >0.013557</td>\n",
-       "      <td id=\"T_44d86_row4_col2\" class=\"data row4 col2\" >0.001143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row5_col0\" class=\"data row5 col0\" >Rating on Previous Fixed Quarter Date AA</td>\n",
-       "      <td id=\"T_44d86_row5_col1\" class=\"data row5 col1\" >0.010714</td>\n",
-       "      <td id=\"T_44d86_row5_col2\" class=\"data row5 col2\" >0.001722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row6_col0\" class=\"data row6 col0\" >Rating on Previous Fixed Quarter Date D</td>\n",
-       "      <td id=\"T_44d86_row6_col1\" class=\"data row6 col1\" >0.001829</td>\n",
-       "      <td id=\"T_44d86_row6_col2\" class=\"data row6 col2\" >0.000050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row7_col0\" class=\"data row7 col0\" >Ratio D</td>\n",
-       "      <td id=\"T_44d86_row7_col1\" class=\"data row7 col1\" >0.000866</td>\n",
-       "      <td id=\"T_44d86_row7_col2\" class=\"data row7 col2\" >0.000799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row8_col0\" class=\"data row8 col0\" >Weighted Average Shares Outstanding (Diluted)</td>\n",
-       "      <td id=\"T_44d86_row8_col1\" class=\"data row8 col1\" >0.000849</td>\n",
-       "      <td id=\"T_44d86_row8_col2\" class=\"data row8 col2\" >0.000249</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row9_col0\" class=\"data row9 col0\" >Other Expenses</td>\n",
-       "      <td id=\"T_44d86_row9_col1\" class=\"data row9 col1\" >0.000840</td>\n",
-       "      <td id=\"T_44d86_row9_col2\" class=\"data row9 col2\" >0.000262</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row10_col0\" class=\"data row10 col0\" >Net Income Ratio</td>\n",
-       "      <td id=\"T_44d86_row10_col1\" class=\"data row10 col1\" >0.000713</td>\n",
-       "      <td id=\"T_44d86_row10_col2\" class=\"data row10 col2\" >0.000779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row11_col0\" class=\"data row11 col0\" >Numeric Transparency</td>\n",
-       "      <td id=\"T_44d86_row11_col1\" class=\"data row11 col1\" >0.000703</td>\n",
-       "      <td id=\"T_44d86_row11_col2\" class=\"data row11 col2\" >0.000566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row12_col0\" class=\"data row12 col0\" >EBITDA</td>\n",
-       "      <td id=\"T_44d86_row12_col1\" class=\"data row12 col1\" >0.000681</td>\n",
-       "      <td id=\"T_44d86_row12_col2\" class=\"data row12 col2\" >0.000428</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row13_col0\" class=\"data row13 col0\" >Ratio C</td>\n",
-       "      <td id=\"T_44d86_row13_col1\" class=\"data row13 col1\" >0.000412</td>\n",
-       "      <td id=\"T_44d86_row13_col2\" class=\"data row13 col2\" >0.000538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_44d86_row14_col0\" class=\"data row14 col0\" >Ratio B</td>\n",
-       "      <td id=\"T_44d86_row14_col1\" class=\"data row14 col1\" >0.000130</td>\n",
-       "      <td id=\"T_44d86_row14_col2\" class=\"data row14 col2\" >0.000340</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1d8fbdbf7d0>"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "include_previous_pi_top_15 = (include_previous_pi_top_15.reset_index(drop=True)\n",
     "                            .style\n",
@@ -1113,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1208,56 +1109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_5429e th {\n",
-       "  text-align: center;\n",
-       "}\n",
-       "#T_5429e_row0_col0, #T_5429e_row0_col1, #T_5429e_row1_col0, #T_5429e_row1_col1, #T_5429e_row2_col0, #T_5429e_row2_col1, #T_5429e_row3_col0, #T_5429e_row3_col1 {\n",
-       "  text-align: center;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_5429e\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th id=\"T_5429e_level0_col0\" class=\"col_heading level0 col0\" >Model/Baseline</th>\n",
-       "      <th id=\"T_5429e_level0_col1\" class=\"col_heading level0 col1\" >Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td id=\"T_5429e_row0_col0\" class=\"data row0 col0\" >Altman's Z</td>\n",
-       "      <td id=\"T_5429e_row0_col1\" class=\"data row0 col1\" >0.9535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_5429e_row1_col0\" class=\"data row1 col0\" >Financial Variables and Sector</td>\n",
-       "      <td id=\"T_5429e_row1_col1\" class=\"data row1 col1\" >0.0286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_5429e_row2_col0\" class=\"data row2 col0\" >Financial Variables, Sector, and NLP Features</td>\n",
-       "      <td id=\"T_5429e_row2_col1\" class=\"data row2 col1\" >0.5984</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_5429e_row3_col0\" class=\"data row3 col0\" >Majority Baseline</td>\n",
-       "      <td id=\"T_5429e_row3_col1\" class=\"data row3 col1\" >0.9535</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1d8fc05cdd0>"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Styling\n",
     "#print(exclude_previous_model_comparison_df)\n",
