--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -1097,6 +1097,14 @@
     "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/change_' + spec + 'model_comparison_df.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
+    "    # Smaller version latex - keep only columns 'Model/Baseline', 'Accuracy'\n",
+    "    model_comparison_df_smaller = model_comparison_df[['Model/Baseline', 'Accuracy']]\n",
+    "    # Center all columns\n",
+    "    lt_string = model_comparison_df_smaller.to_latex(index=False, column_format='c' * len(model_comparison_df_smaller.columns), escape=False)\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/change_' + spec + 'model_comparison_df_smaller.tex', 'w') as f:\n",
+    "        f.write(latex_with_font_size)\n",
+    "\n",
     "    print(model_comparison_df)"
    ]
   },
